--- a/WIN.html
+++ b/WIN.html
@@ -3,7 +3,32 @@
 
 		var joke;
 		var setup;
-		var delivery;
+		var delivery;	
+		var maxWidth = 400;
+		var lineHeight = 24;
+
+			function wrapText(context, text, x, y, maxWidth, lineHeight) {
+				var words = text.split(' ');
+				var line = '';
+
+				for (var n = 0; n < words.length; n++) {
+					var testLine = line + words[n] + ' ';
+					var metrics = context.measureText(testLine);
+					var testWidth = metrics.width;
+					if (testWidth > maxWidth && n > 0) {
+						context.fillText(line, x, y);
+						line = words[n] + ' ';
+						y += lineHeight;
+					}
+					else {
+						line = testLine;
+					}
+				}
+				context.fillText(line, x, y);
+			}
+
+
+
 
 		function FaireBlagues() {
 			fetch('https://sv443.net/jokeapi/category/any?blacklistFlags=nsfwreligiouspolitical').then(response => {
@@ -33,8 +58,6 @@
 			FaireBlagues();
 			var img = document.createElement("img");
 			img.src = "bulleBd.jpg";
-			/*var block = document.getElementById("x");
-			block.appendChild(img);*/
 
 			if (joke != null) {
 
@@ -44,10 +67,10 @@
 				ctx.drawImage(img, 50, 50);
 
 				ctx.font = "30px Arial";
-				ctx.fillText(joke, 100, 200);
+				wrapText(ctx, joke, 100, 200, maxWidth, lineHeight);
 
 			}
-			else {
+			else if((setup != null) && (delivery!=null)) {
 
 
 				var canvas = document.getElementById('canvas');
@@ -57,8 +80,8 @@
 				ctx.drawImage(img, 800, 10);
 
 				ctx.font = "30px Arial";
-				ctx.fillText(setup, 100, 200);
-				ctx.fillText(delivery, 900, 200);
+				wrapText(ctx, setup, 100, 200, maxWidth, lineHeight);
+				wrapText(ctx, delivery, 900, 200, maxWidth, lineHeight);
 
 			}
 
