Récupération des photos des chiens + affichages blagues

--- a/WIN.html
+++ b/WIN.html
@@ -69,7 +69,7 @@
 				ctx.clearRect(0, 0, 1600, 800);
 				ctx.drawImage(img, xBulle1, yBulle1);
 
-				ctx.font = "30px Arial";
+				ctx.font = "30px Comic sans ms";
 				wrapText(ctx, joke, x1, y1, maxWidth, lineHeight);
 
 			}
@@ -90,7 +90,7 @@
 				ctx.drawImage(img, xBulle2_1, yBulle2_1);
 				ctx.drawImage(img, xBulle2_2, yBulle2_2);
 
-				ctx.font = "30px Arial";
+				ctx.font = "30px Comic sans ms";
 				wrapText(ctx, setup, x1, y1, maxWidth, lineHeight);
 				wrapText(ctx, delivery, x2, y2, maxWidth, lineHeight);
 
