--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
 
-    <p><button onclick="loadFile('https://random.dog/woof.json')">Charger</button></p>
+    <p><button onclick="loadFile()">Charger</button></p>
 
     <canvas id="myCanvas" style="border:1px solid #000000;" width="800" height="800"></canvas>
 
